# myndral

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
apps/android/: build.gradle.kts  settings.gradle.kts
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/src/myndral_api/: auth_utils.py  config.py  gcs_utils.py  main.py  media_utils.py  music_generation.py
apps/api/src/myndral_api/db/: session.py
apps/api/src/myndral_api/models/: __init__.py
apps/api/src/myndral_api/routers/: albums.py  artists.py  auth.py  exports.py  health.py  internal.py  internal_users.py  notifications.py  playlists.py  search.py  staging.py  stream.py  tracks.py  users.py
apps/api/tests/: conftest.py  test_health.py  test_library_and_management.py  test_music_generation.py
apps/internal-web/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/ios/: README.md  app.config.js  package-lock.json  package.json
apps/web/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/web/src/: App.tsx  (+3 more)
db/: schema.sql
db/migrations/: 20260302_01_add_music_generation_job_type.sql  20260315_01_staging_and_notifications.sql  20260315_02_export_licenses.sql  20260315_02_polymorphic_staging.sql  20260316_01_add_wav_audio_format.sql  20260316_02_library_and_user_management.sql
db/seeds/: 01_genres.sql  02_subscription_plans.sql  03_dev_catalog.sql  README.md
docs/: architecture.md  decisions-log.md
infra/: DEPLOY.md  cloudbuild.yaml  docker-compose.yml
infra/migrate/: Dockerfile  run_migrations.py
infra/nginx/: spa.conf
services/: README.md
shared/brand/: index.ts  theme.ts  tokens.css
src/myndral/: __init__.py  ai_graph.py  game.py  main.py  maze.py  npc.py  opening.py  player.py  world.py
(+178 files in other folders)
